app/assets/stylesheets/startui/overwrite.scss
.page-content {
  ul {
    list-style: inherit;
    margin-bottom: 1rem;
    padding-left: 2rem;

    &.side-menu-list,
    &.nav {
      list-style: none;
      margin-bottom: 0;
      padding-left: 0;
    }
  }
  nav {
    ul {
      padding-left: 0;
    }
  }
}

.comment-row-item {
  &.no-photo {
    padding-left: 15px;
  }

  p {
    margin-bottom: 1rem;
  }
}

.label {
  &.label-one-number {
    min-width: 26px;
  }
  &.label-two-numbers {
    min-width: 48px;
  }
}

// .sign-avatar.sign-logo
.sign-box {
  max-width: 420px;

  .sign-avatar {
    &.sign-logo {
      img {
        border-radius: 0;
      }
    }
  }

  a:hover, a:hover:hover {
    text-decoration: none;
  }
}

.devise {
  .alert {
    display: inline-block;
  }
}

.show-hide-sidebar {
  float: left;
  margin: 0 12px 0 0;
}

.site-header {
  h1 {
    color: #adb7be;
    float: left;
    font-size: 1.8rem;
    font-weight: 100;
    line-height: 2.5rem;
  }

  .hamburger {
    margin: 0 12px 0 0;
  }

  .site-header-content {
    margin-left: -290px;

    .site-header-content-in {
      margin-left: 290px;
    }
  }
}

abbr[title] {
  border: 0;
  text-decoration: none;
}

@media (max-width: 767px) {
  .site-header {
    h1 {
      font-size: 1.2rem;
    }
  }
}

@media (max-width: 1056px) {
  body {
    &.sidebar-hidden {
      .page-content {
        padding-left: 0;
      }
    }
  }
}

.box-typical {
  .box-typical-header {
    .tbl-cell.tbl-cell-title {
      padding-right: 15px;
    }
  }
}

th {
  .action-btn {
    color: #6c7a86;
    padding: 8px;
  }
}

